sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:5: error: not enough arguments for method actualDist: (nbBases: Int, nbPos: Int, base: Int)Array[Int].
Unspecified value parameter base.
  liste = actualDist(nbBases,nbPos)
                    ^NaiveBaseball:9: error: type mismatch;
 found   : Unit
 required: Int
    trou=trouverTrou(nbBases,nbPos)
                    ^NaiveBaseball:11: error: not enough arguments for method actualDist: (nbBases: Int, nbPos: Int, base: Int)Array[Int].
Unspecified value parameter base.
    liste = actualDist(nbBases,nbPos)
                      ^NaiveBaseball:49: error: value ==- is not a member of Int
    if (getCouleurJoueur(i,j)==-1){
                             ^NaiveBaseball:50: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return i
             ^NaiveBaseball:50: warning: enclosing method trouverTrou has result type Unit: return value discarded
      return i
      ^